typescript/checker/tests/conformance/parser/ecmascript5/Accessors/parserGetAccessorWithTypeParameters1.ts.stderr
error: An accessor cannot have type parameters
 --> $DIR/tests/conformance/parser/ecmascript5/Accessors/parserGetAccessorWithTypeParameters1.ts:3:7
  |
3 |   get foo<T>() { }
  |       ^^^

error: A 'get' accessor must return a value.
 --> $DIR/tests/conformance/parser/ecmascript5/Accessors/parserGetAccessorWithTypeParameters1.ts:3:7
  |
3 |   get foo<T>() { }
  |       ^^^

